Update release notes

--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...845b2fa](https://github.com/cri-o/cri-o/compare/v1.20.2...845b2faee1306725c785935b4109bb563a346f3c) on Fri, 11 Jun 2021 19:00:20 UTC.
+[v1.20.2...baade70](https://github.com/cri-o/cri-o/compare/v1.20.2...baade70f519c0e7d6d93243f7f8264cc04b8a46c) on Wed, 16 Jun 2021 09:10:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz)
-- [cri-o.arm64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz)
+- [cri-o.amd64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz)
+- [cri-o.arm64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5000](https://github.com/cri-o/cri-o/pull/5000), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4847](https://github.com/cri-o/cri-o/pull/4847), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix bug where cri-o would fail if tzdata package wasn't installed ([#4716](https://github.com/cri-o/cri-o/pull/4716), [@haircommander](https://github.com/haircommander))
 
