--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...4e1d564](https://github.com/cri-o/cri-o/compare/v1.20.0...4e1d564b29b4d491a4527556198160461942cf73) on Wed, 16 Jun 2021 00:57:34 UTC.
+[v1.20.0...86ebaea](https://github.com/cri-o/cri-o/compare/v1.20.0...86ebaead2b0a717c167c84d02e89b7b3ac5025c3) on Wed, 16 Jun 2021 12:21:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz)
-- [cri-o.arm64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz)
+- [cri-o.amd64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz)
+- [cri-o.arm64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -63,6 +63,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
+ - Changed the logging behavior of klog messages to be included in the CRI-O logs.
+  The klog info verbositry is converted to CRI-O debug to lower the log verbosity. ([#4973](https://github.com/cri-o/cri-o/pull/4973), [@saschagrunert](https://github.com/saschagrunert))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Fall back to search registries list if short name alias is not found in the alias table. ([#4730](https://github.com/cri-o/cri-o/pull/4730), [@umohnani8](https://github.com/umohnani8))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
@@ -137,7 +139,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
