--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...86ebaea](https://github.com/cri-o/cri-o/compare/v1.20.0...86ebaead2b0a717c167c84d02e89b7b3ac5025c3) on Wed, 16 Jun 2021 12:21:39 UTC.
+[v1.20.0...ac9b621](https://github.com/cri-o/cri-o/compare/v1.20.0...ac9b6213d5137ce2b9a4173de1841bfc43dc4c2e) on Thu, 17 Jun 2021 05:34:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz)
-- [cri-o.arm64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.86ebaead2b0a717c167c84d02e89b7b3ac5025c3.tar.gz)
+- [cri-o.amd64.ac9b6213d5137ce2b9a4173de1841bfc43dc4c2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ac9b6213d5137ce2b9a4173de1841bfc43dc4c2e.tar.gz)
+- [cri-o.arm64.ac9b6213d5137ce2b9a4173de1841bfc43dc4c2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ac9b6213d5137ce2b9a4173de1841bfc43dc4c2e.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -139,7 +139,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
@@ -169,6 +169,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
 - github.com/containerd/zfs: [v1.0.0](https://github.com/containerd/zfs/tree/v1.0.0)
 - github.com/containers/podman/v3: [v3.1.2](https://github.com/containers/podman/v3/tree/v3.1.2)
+- github.com/danieljoos/wincred: [v1.1.0](https://github.com/danieljoos/wincred/tree/v1.1.0)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
 - github.com/docker/go-plugins-helpers: [c9a8a2d](https://github.com/docker/go-plugins-helpers/tree/c9a8a2d)
@@ -219,6 +220,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
 - github.com/stefanberger/go-pkcs11uri: [78d3cae](https://github.com/stefanberger/go-pkcs11uri/tree/78d3cae)
 - github.com/vbauerster/mpb/v6: [v6.0.3](https://github.com/vbauerster/mpb/v6/tree/v6.0.3)
+- github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
 - github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
 - github.com/xlab/treeprint: [a009c39](https://github.com/xlab/treeprint/tree/a009c39)
@@ -244,6 +246,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/Microsoft/hcsshim: [5eafd15 → v0.8.17](https://github.com/Microsoft/hcsshim/compare/5eafd15...v0.8.17)
 - github.com/NYTimes/gziphandler: [56545f4 → v1.1.1](https://github.com/NYTimes/gziphandler/compare/56545f4...v1.1.1)
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
+- github.com/VividCortex/ewma: [v1.1.1 → v1.2.0](https://github.com/VividCortex/ewma/compare/v1.1.1...v1.2.0)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/aws/aws-sdk-go: [v1.35.24 → v1.37.6](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.37.6)
 - github.com/cilium/ebpf: [4032b1d → v0.5.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.5.0)
@@ -259,7 +262,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.20.1](https://github.com/containers/buildah/compare/v1.15.2...v1.20.1)
 - github.com/containers/common: [v0.21.0 → v0.37.1](https://github.com/containers/common/compare/v0.21.0...v0.37.1)
-- github.com/containers/image/v5: [v5.7.0 → v5.12.0](https://github.com/containers/image/v5/compare/v5.7.0...v5.12.0)
+- github.com/containers/image/v5: [v5.7.0 → v5.13.0](https://github.com/containers/image/v5/compare/v5.7.0...v5.13.0)
 - github.com/containers/ocicrypt: [v1.0.3 → v1.1.1](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.1)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
 - github.com/containers/storage: [v1.24.0 → v1.32.2](https://github.com/containers/storage/compare/v1.24.0...v1.32.2)
@@ -268,6 +271,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/coreos/go-systemd/v22: [v22.1.0 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.13](https://github.com/creack/pty/compare/v1.1.11...v1.1.13)
 - github.com/cri-o/ocicni: [513ef78 → 541cf7c](https://github.com/cri-o/ocicni/compare/513ef78...541cf7c)
+- github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
 - github.com/docker/docker: [bd33bbf → 646072e](https://github.com/docker/docker/compare/bd33bbf...646072e)
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 668b12f](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...668b12f)
@@ -294,13 +298,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/grpc-ecosystem/go-grpc-middleware: [v1.2.0 → v1.3.0](https://github.com/grpc-ecosystem/go-grpc-middleware/compare/v1.2.0...v1.3.0)
 - github.com/hashicorp/go-multierror: [v1.1.0 → v1.1.1](https://github.com/hashicorp/go-multierror/compare/v1.1.0...v1.1.1)
 - github.com/heketi/heketi: [c2e2a4a → v10.2.0+incompatible](https://github.com/heketi/heketi/compare/c2e2a4a...v10.2.0)
+- github.com/imdario/mergo: [v0.3.11 → v0.3.12](https://github.com/imdario/mergo/compare/v0.3.11...v0.3.12)
 - github.com/insomniacslk/dhcp: [ed3125c → cc9239a](https://github.com/insomniacslk/dhcp/compare/ed3125c...cc9239a)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/julienschmidt/httprouter: [v1.2.0 → v1.3.0](https://github.com/julienschmidt/httprouter/compare/v1.2.0...v1.3.0)
 - github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
-- github.com/klauspost/compress: [v1.11.2 → v1.13.0](https://github.com/klauspost/compress/compare/v1.11.2...v1.13.0)
+- github.com/klauspost/compress: [v1.11.2 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.2...v1.13.1)
 - github.com/mattn/go-colorable: [v0.1.4 → v0.1.8](https://github.com/mattn/go-colorable/compare/v0.1.4...v0.1.8)
-- github.com/mattn/go-runewidth: [v0.0.9 → v0.0.10](https://github.com/mattn/go-runewidth/compare/v0.0.9...v0.0.10)
+- github.com/mattn/go-runewidth: [v0.0.9 → v0.0.13](https://github.com/mattn/go-runewidth/compare/v0.0.9...v0.0.13)
 - github.com/mattn/go-shellwords: [v1.0.10 → v1.0.12](https://github.com/mattn/go-shellwords/compare/v1.0.10...v1.0.12)
 - github.com/maxbrunsfeld/counterfeiter/v6: [v6.3.0 → v6.4.1](https://github.com/maxbrunsfeld/counterfeiter/v6/compare/v6.3.0...v6.4.1)
 - github.com/miekg/dns: [v1.1.4 → v1.1.35](https://github.com/miekg/dns/compare/v1.1.4...v1.1.35)
@@ -344,6 +349,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vishvananda/netlink: [v1.1.0 → d40f988](https://github.com/vishvananda/netlink/compare/v1.1.0...d40f988)
 - github.com/willf/bitset: [d5bec33 → v1.1.11](https://github.com/willf/bitset/compare/d5bec33...v1.1.11)
 - github.com/yuin/goldmark: [v1.2.1 → v1.3.1](https://github.com/yuin/goldmark/compare/v1.2.1...v1.3.1)
+- go.etcd.io/bbolt: v1.3.5 → v1.3.6
 - golang.org/x/crypto: 7f63de1 → 0c34fe9
 - golang.org/x/exp: 6cc2880 → 85be41e
 - golang.org/x/lint: 738671d → 83fdc39
@@ -352,7 +358,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → ebe580a
+- golang.org/x/sys: 5cba982 → 9665404
 - golang.org/x/term: ad39bd3 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: 3af7569 → f8bda1e
