Update release notes

--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...dfcd2b6](https://github.com/cri-o/cri-o/compare/v1.21.0...dfcd2b6a61cd5436e6beb54956c6ee4453104968) on Wed, 16 Jun 2021 09:02:02 UTC.
+[v1.21.0...d3e59a4](https://github.com/cri-o/cri-o/compare/v1.21.0...d3e59a4e7363122de17308cc06531b61d1430e0e) on Mon, 21 Jun 2021 14:09:26 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz)
-- [cri-o.arm64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz)
+- [cri-o.amd64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz)
+- [cri-o.arm64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
+ - Fixed "layer not known" issue during image pull for corrupted `layers.json` files. ([#5015](https://github.com/cri-o/cri-o/pull/5015), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4986](https://github.com/cri-o/cri-o/pull/4986), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
@@ -59,13 +60,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
+- github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
 - github.com/google/go-intervals: [v0.0.2](https://github.com/google/go-intervals/tree/v0.0.2)
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 
 ### Changed
-- github.com/Microsoft/go-winio: [6eac466 → v0.4.17](https://github.com/Microsoft/go-winio/compare/6eac466...v0.4.17)
+- github.com/Microsoft/go-winio: [6eac466 → v0.5.0](https://github.com/Microsoft/go-winio/compare/6eac466...v0.5.0)
 - github.com/Microsoft/hcsshim: [v0.8.15 → v0.8.17](https://github.com/Microsoft/hcsshim/compare/v0.8.15...v0.8.17)
 - github.com/cilium/ebpf: [v0.2.0 → v0.5.0](https://github.com/cilium/ebpf/compare/v0.2.0...v0.5.0)
 - github.com/containerd/aufs: [20793ff → v1.0.0](https://github.com/containerd/aufs/compare/20793ff...v1.0.0)
@@ -83,12 +85,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/zfs: [dde8f0f → v1.0.0](https://github.com/containerd/zfs/compare/dde8f0f...v1.0.0)
 - github.com/containers/image/v5: [v5.11.0 → v5.11.1](https://github.com/containers/image/v5/compare/v5.11.0...v5.11.1)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.1](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.1)
-- github.com/containers/storage: [v1.28.1 → v1.31.1](https://github.com/containers/storage/compare/v1.28.1...v1.31.1)
+- github.com/containers/storage: [v1.28.1 → v1.32.3](https://github.com/containers/storage/compare/v1.28.1...v1.32.3)
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
-- github.com/klauspost/compress: [v1.11.13 → v1.12.2](https://github.com/klauspost/compress/compare/v1.11.13...v1.12.2)
+- github.com/klauspost/compress: [v1.11.13 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.1)
+- github.com/mattn/go-shellwords: [v1.0.11 → v1.0.12](https://github.com/mattn/go-shellwords/compare/v1.0.11...v1.0.12)
 - github.com/opencontainers/runc: [v1.0.0-rc93 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...a95237f)
-- github.com/opencontainers/selinux: [v1.8.0 → v1.8.1](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.1)
+- github.com/opencontainers/selinux: [v1.8.0 → v1.8.2](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.2)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
 - golang.org/x/crypto: 5ea612d → 0c34fe9
