--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...9a3a662](https://github.com/cri-o/cri-o/compare/v1.20.0...9a3a6625ab696299af90c5dcaa4677a40d6b545b) on Mon, 21 Jun 2021 23:48:55 UTC.
+[v1.20.0...117f0d9](https://github.com/cri-o/cri-o/compare/v1.20.0...117f0d9ba05684a952342aa89628c8d503d2e417) on Tue, 22 Jun 2021 08:21:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9a3a6625ab696299af90c5dcaa4677a40d6b545b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9a3a6625ab696299af90c5dcaa4677a40d6b545b.tar.gz)
-- [cri-o.arm64.9a3a6625ab696299af90c5dcaa4677a40d6b545b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9a3a6625ab696299af90c5dcaa4677a40d6b545b.tar.gz)
+- [cri-o.amd64.117f0d9ba05684a952342aa89628c8d503d2e417.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.117f0d9ba05684a952342aa89628c8d503d2e417.tar.gz)
+- [cri-o.arm64.117f0d9ba05684a952342aa89628c8d503d2e417.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.117f0d9ba05684a952342aa89628c8d503d2e417.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -58,6 +58,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
   The static binary bundle now uses crun as default container runtime for CRI-O. ([#4552](https://github.com/cri-o/cri-o/pull/4552), [@saschagrunert](https://github.com/saschagrunert))
  - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
   using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
+ - Added generation of self-signed certificates for the secure metrics endpoint
+  if the provided cert and key paths are not available on disk. ([#5012](https://github.com/cri-o/cri-o/pull/5012), [@saschagrunert](https://github.com/saschagrunert))
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
  - Automatically reload metrics TLS certificate and key if any of those specified files change. ([#4927](https://github.com/cri-o/cri-o/pull/4927), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
