Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...1e1923c](https://github.com/cri-o/cri-o/compare/v1.20.0...1e1923c172428c72bdbd29ddc978ce4406ab26df) on Wed, 23 Jun 2021 06:42:29 UTC.
+[v1.20.0...e188ab7](https://github.com/cri-o/cri-o/compare/v1.20.0...e188ab74ae6cd0f89ef216b48fbea62871d1809b) on Wed, 23 Jun 2021 12:16:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1e1923c172428c72bdbd29ddc978ce4406ab26df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1e1923c172428c72bdbd29ddc978ce4406ab26df.tar.gz)
-- [cri-o.arm64.1e1923c172428c72bdbd29ddc978ce4406ab26df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1e1923c172428c72bdbd29ddc978ce4406ab26df.tar.gz)
+- [cri-o.amd64.e188ab74ae6cd0f89ef216b48fbea62871d1809b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e188ab74ae6cd0f89ef216b48fbea62871d1809b.tar.gz)
+- [cri-o.arm64.e188ab74ae6cd0f89ef216b48fbea62871d1809b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e188ab74ae6cd0f89ef216b48fbea62871d1809b.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -76,6 +76,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
  - Support Container Runtime Interface (CRI) security profiles for seccomp, which has been introduced with Kubernetes v1.20.0 and the graduation of the CRI. ([#4358](https://github.com/cri-o/cri-o/pull/4358), [@saschagrunert](https://github.com/saschagrunert))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
+ - Validate certificate dates for TLS metrics endpoint ([#4990](https://github.com/cri-o/cri-o/pull/4990), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Design
  - Add support for customizing container specs based on workloads. Each workload has an activation_annotation that, when present, activates the specific workload. Then, each workload has the option to configure different resources. Resources can have default values, or require that they're specified for each individual container. This is done by annotation, which is of the form `$annotation_prefix.$resource_name/$container_name`, where annotation_prefix is configured for the particular workload, resource_name corresponds to the resource being configured, and container name is the container in a pod that should have its resource configured. ([#4725](https://github.com/cri-o/cri-o/pull/4725), [@haircommander](https://github.com/haircommander))
