Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...fa01253](https://github.com/cri-o/cri-o/compare/v1.20.0...fa012537fa004489be7b0068a676306369f68b89) on Wed, 23 Jun 2021 14:07:41 UTC.
+[v1.20.0...a8af5b8](https://github.com/cri-o/cri-o/compare/v1.20.0...a8af5b86a343f81beced4a0697786d201cabbd88) on Wed, 23 Jun 2021 20:05:33 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fa012537fa004489be7b0068a676306369f68b89.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fa012537fa004489be7b0068a676306369f68b89.tar.gz)
-- [cri-o.arm64.fa012537fa004489be7b0068a676306369f68b89.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fa012537fa004489be7b0068a676306369f68b89.tar.gz)
+- [cri-o.amd64.a8af5b86a343f81beced4a0697786d201cabbd88.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a8af5b86a343f81beced4a0697786d201cabbd88.tar.gz)
+- [cri-o.arm64.a8af5b86a343f81beced4a0697786d201cabbd88.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a8af5b86a343f81beced4a0697786d201cabbd88.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -63,6 +63,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
  - Automatically reload metrics TLS certificate and key if any of those specified files change. ([#4927](https://github.com/cri-o/cri-o/pull/4927), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
+ - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5026](https://github.com/cri-o/cri-o/pull/5026), [@dcbw](https://github.com/dcbw))
  - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Changed the logging behavior of klog messages to be included in the CRI-O logs.
@@ -273,7 +274,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/coreos/go-iptables: [v0.4.5 → v0.5.0](https://github.com/coreos/go-iptables/compare/v0.4.5...v0.5.0)
 - github.com/coreos/go-systemd/v22: [v22.1.0 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.13](https://github.com/creack/pty/compare/v1.1.11...v1.1.13)
-- github.com/cri-o/ocicni: [513ef78 → 541cf7c](https://github.com/cri-o/ocicni/compare/513ef78...541cf7c)
+- github.com/cri-o/ocicni: [513ef78 → 4ea5fb8](https://github.com/cri-o/ocicni/compare/513ef78...4ea5fb8)
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
 - github.com/docker/docker: [bd33bbf → 646072e](https://github.com/docker/docker/compare/bd33bbf...646072e)
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
