--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.20.2](#changelog-since-v1202)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
+      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
@@ -13,14 +14,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...baade70](https://github.com/cri-o/cri-o/compare/v1.20.2...baade70f519c0e7d6d93243f7f8264cc04b8a46c) on Wed, 16 Jun 2021 09:10:45 UTC.
+[v1.20.2...bf90cc5](https://github.com/cri-o/cri-o/compare/v1.20.2...bf90cc57ea6bd8fb30cc1548934b180af7781138) on Thu, 24 Jun 2021 17:21:28 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz)
-- [cri-o.arm64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.baade70f519c0e7d6d93243f7f8264cc04b8a46c.tar.gz)
+- [cri-o.amd64.bf90cc57ea6bd8fb30cc1548934b180af7781138.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.bf90cc57ea6bd8fb30cc1548934b180af7781138.tar.gz)
+- [cri-o.arm64.bf90cc57ea6bd8fb30cc1548934b180af7781138.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.bf90cc57ea6bd8fb30cc1548934b180af7781138.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -28,6 +29,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Dependency-Change
  - Fix possible segfault when image is deleted by podman while CRI-O is listing images ([#4933](https://github.com/cri-o/cri-o/pull/4933), [@haircommander](https://github.com/haircommander))
+
+#### Feature
+ - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5029](https://github.com/cri-o/cri-o/pull/5029), [@dcbw](https://github.com/dcbw))
 
 #### Bug or Regression
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
@@ -47,7 +51,11 @@ _Nothing has changed._
 - github.com/containers/common: [v0.21.0 → v0.26.3](https://github.com/containers/common/compare/v0.21.0...v0.26.3)
 - github.com/containers/image/v5: [v5.10.1 → v5.10.6](https://github.com/containers/image/v5/compare/v5.10.1...v5.10.6)
 - github.com/containers/storage: [e00c943 → aa7e38b](https://github.com/containers/storage/compare/e00c943...aa7e38b)
+- github.com/cri-o/ocicni: [513ef78 → 4ea5fb8](https://github.com/cri-o/ocicni/compare/513ef78...4ea5fb8)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.14.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.14.2)
 
 ### Removed
-_Nothing has changed._
+- github.com/juju/errors: [22422da](https://github.com/juju/errors/tree/22422da)
+- github.com/juju/loggo: [6e530bc](https://github.com/juju/loggo/tree/6e530bc)
+- github.com/juju/testing: [e811894](https://github.com/juju/testing/tree/e811894)
+- gopkg.in/mgo.v2: 9856a29
