--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.21.0](#changelog-since-v1210)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
+      - [Feature](#feature)
       - [Failing Test](#failing-test)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
@@ -14,14 +15,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...d3e59a4](https://github.com/cri-o/cri-o/compare/v1.21.0...d3e59a4e7363122de17308cc06531b61d1430e0e) on Mon, 21 Jun 2021 14:09:26 UTC.
+[v1.21.0...30ca719](https://github.com/cri-o/cri-o/compare/v1.21.0...30ca719956bba567a93876beaa24773428b2ddb4) on Thu, 24 Jun 2021 18:26:25 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz)
-- [cri-o.arm64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d3e59a4e7363122de17308cc06531b61d1430e0e.tar.gz)
+- [cri-o.amd64.30ca719956bba567a93876beaa24773428b2ddb4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.30ca719956bba567a93876beaa24773428b2ddb4.tar.gz)
+- [cri-o.arm64.30ca719956bba567a93876beaa24773428b2ddb4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.30ca719956bba567a93876beaa24773428b2ddb4.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -29,6 +30,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Dependency-Change
  - Fix possible segfault when image is deleted by podman while CRI-O is listing images ([#4932](https://github.com/cri-o/cri-o/pull/4932), [@haircommander](https://github.com/haircommander))
+
+#### Feature
+ - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5028](https://github.com/cri-o/cri-o/pull/5028), [@dcbw](https://github.com/dcbw))
 
 #### Failing Test
  - Updated static binary bundle crun version to v0.20 ([#4961](https://github.com/cri-o/cri-o/pull/4961), [@saschagrunert](https://github.com/saschagrunert))
@@ -86,6 +90,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/image/v5: [v5.11.0 → v5.11.1](https://github.com/containers/image/v5/compare/v5.11.0...v5.11.1)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.1](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.1)
 - github.com/containers/storage: [v1.28.1 → v1.32.3](https://github.com/containers/storage/compare/v1.28.1...v1.32.3)
+- github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/klauspost/compress: [v1.11.13 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.1)
