Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...10621b0](https://github.com/cri-o/cri-o/compare/v1.20.0...10621b0589d072ef77e2dbd428de6cb8c0ab5e39) on Fri, 25 Jun 2021 21:21:51 UTC.
+[v1.20.0...b67b4b5](https://github.com/cri-o/cri-o/compare/v1.20.0...b67b4b5689be38b2cc9be7148e2ad244bd483c59) on Mon, 28 Jun 2021 06:50:01 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.10621b0589d072ef77e2dbd428de6cb8c0ab5e39.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.10621b0589d072ef77e2dbd428de6cb8c0ab5e39.tar.gz)
-- [cri-o.arm64.10621b0589d072ef77e2dbd428de6cb8c0ab5e39.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.10621b0589d072ef77e2dbd428de6cb8c0ab5e39.tar.gz)
+- [cri-o.amd64.b67b4b5689be38b2cc9be7148e2ad244bd483c59.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b67b4b5689be38b2cc9be7148e2ad244bd483c59.tar.gz)
+- [cri-o.arm64.b67b4b5689be38b2cc9be7148e2ad244bd483c59.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b67b4b5689be38b2cc9be7148e2ad244bd483c59.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -37,6 +37,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update static binary bundle runc version to `v1.0.0-rc95`. ([#4920](https://github.com/cri-o/cri-o/pull/4920), [@saschagrunert](https://github.com/saschagrunert))
  - Updated cri-tools to v1.21.0 within static binary bundle ([#4742](https://github.com/cri-o/cri-o/pull/4742), [@saschagrunert](https://github.com/saschagrunert))
  - Updated crun in static binary bundle to v0.20.1 ([#4959](https://github.com/cri-o/cri-o/pull/4959), [@saschagrunert](https://github.com/saschagrunert))
+ - Updated runc to v1.0.0 within the static binary bundle. ([#5024](https://github.com/cri-o/cri-o/pull/5024), [@saschagrunert](https://github.com/saschagrunert))
 
 #### API Change
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
