--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -14,14 +14,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...0d0f863](https://github.com/cri-o/cri-o/compare/v1.20.2...0d0f863a5c092f92d5af58a5cca396d3f6d4a2c4) on Fri, 25 Jun 2021 07:05:37 UTC.
+[v1.20.2...41925ef](https://github.com/cri-o/cri-o/compare/v1.20.2...41925ef13bf83e77dc264cffc98b600c776e7748) on Mon, 28 Jun 2021 13:27:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0d0f863a5c092f92d5af58a5cca396d3f6d4a2c4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0d0f863a5c092f92d5af58a5cca396d3f6d4a2c4.tar.gz)
-- [cri-o.arm64.0d0f863a5c092f92d5af58a5cca396d3f6d4a2c4.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0d0f863a5c092f92d5af58a5cca396d3f6d4a2c4.tar.gz)
+- [cri-o.amd64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz)
+- [cri-o.arm64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -36,6 +36,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#5014](https://github.com/cri-o/cri-o/pull/5014), [@haircommander](https://github.com/haircommander))
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
+ - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
