Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...2b8e727](https://github.com/cri-o/cri-o/compare/v1.21.0...2b8e727c13b636db39f0888d429fa09bea522bd7) on Thu, 01 Jul 2021 08:36:27 UTC.
+[v1.21.0...0aa5724](https://github.com/cri-o/cri-o/compare/v1.21.0...0aa5724e67461c5021c71b2eb5c0886a93863094) on Thu, 01 Jul 2021 11:30:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2b8e727c13b636db39f0888d429fa09bea522bd7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2b8e727c13b636db39f0888d429fa09bea522bd7.tar.gz)
-- [cri-o.arm64.2b8e727c13b636db39f0888d429fa09bea522bd7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2b8e727c13b636db39f0888d429fa09bea522bd7.tar.gz)
+- [cri-o.amd64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz)
+- [cri-o.arm64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -84,11 +84,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Added
 - github.com/andybalholm/brotli: [v1.0.0](https://github.com/andybalholm/brotli/tree/v1.0.0)
+- github.com/antihax/optional: [v1.0.0](https://github.com/antihax/optional/tree/v1.0.0)
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/carolynvs/magex: [v0.6.0](https://github.com/carolynvs/magex/tree/v0.6.0)
 - github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
+- github.com/cncf/xds/go: [fbca930](https://github.com/cncf/xds/go/tree/fbca930)
 - github.com/danieljoos/wincred: [v1.1.0](https://github.com/danieljoos/wincred/tree/v1.1.0)
 - github.com/dsnet/compress: [v0.0.1](https://github.com/dsnet/compress/tree/v0.0.1)
 - github.com/dsnet/golib: [1ea1667](https://github.com/dsnet/golib/tree/1ea1667)
@@ -108,6 +110,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
 - github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
+- go.opentelemetry.io/proto/otlp: v0.7.0
 - sigs.k8s.io/release-utils: v0.3.0
 - sigs.k8s.io/zeitgeist: v0.3.0
 
@@ -141,13 +144,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/creack/pty: [v1.1.11 → v1.1.13](https://github.com/creack/pty/compare/v1.1.11...v1.1.13)
 - github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
-- github.com/envoyproxy/go-control-plane: [5f8ba28 → 668b12f](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...668b12f)
+- github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
 - github.com/golang/protobuf: [v1.3.5 → v1.5.2](https://github.com/golang/protobuf/compare/v1.3.5...v1.5.2)
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/google/renameio: [v1.0.0 → v1.0.1](https://github.com/google/renameio/compare/v1.0.0...v1.0.1)
 - github.com/grpc-ecosystem/go-grpc-middleware: [v1.2.2 → v1.3.0](https://github.com/grpc-ecosystem/go-grpc-middleware/compare/v1.2.2...v1.3.0)
+- github.com/grpc-ecosystem/grpc-gateway: [v1.9.5 → v1.16.0](https://github.com/grpc-ecosystem/grpc-gateway/compare/v1.9.5...v1.16.0)
 - github.com/hashicorp/consul/api: [v1.3.0 → v1.1.0](https://github.com/hashicorp/consul/api/compare/v1.3.0...v1.1.0)
 - github.com/hashicorp/consul/sdk: [v0.3.0 → v0.1.1](https://github.com/hashicorp/consul/sdk/compare/v0.3.0...v0.1.1)
 - github.com/imdario/mergo: [v0.3.11 → v0.3.12](https://github.com/imdario/mergo/compare/v0.3.11...v0.3.12)
@@ -167,6 +171,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/prometheus/client_golang: [v1.10.0 → v1.11.0](https://github.com/prometheus/client_golang/compare/v1.10.0...v1.11.0)
 - github.com/prometheus/common: [v0.18.0 → v0.26.0](https://github.com/prometheus/common/compare/v0.18.0...v0.26.0)
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
+- github.com/rogpeppe/fastuuid: [6724a57 → v1.2.0](https://github.com/rogpeppe/fastuuid/compare/6724a57...v1.2.0)
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
 - github.com/saschagrunert/go-modiff: [v1.2.1 → v1.3.0](https://github.com/saschagrunert/go-modiff/compare/v1.2.1...v1.3.0)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
@@ -182,7 +187,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/term: 6a3ed07 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/tools: v0.1.0 → v0.1.1
-- google.golang.org/grpc: v1.27.0 → v1.38.0
+- google.golang.org/grpc: v1.27.0 → v1.39.0
 - google.golang.org/protobuf: v1.25.0 → v1.26.0
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
