--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...0aa5724](https://github.com/cri-o/cri-o/compare/v1.21.0...0aa5724e67461c5021c71b2eb5c0886a93863094) on Thu, 01 Jul 2021 11:30:10 UTC.
+[v1.21.0...d41627b](https://github.com/cri-o/cri-o/compare/v1.21.0...d41627bc87d225b32eeecccaad3b7ffe79141f99) on Sat, 03 Jul 2021 13:56:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz)
-- [cri-o.arm64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0aa5724e67461c5021c71b2eb5c0886a93863094.tar.gz)
+- [cri-o.amd64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz)
+- [cri-o.arm64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -71,6 +71,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
  - Reduce the permission on the listen socket to 0660 ([#4886](https://github.com/cri-o/cri-o/pull/4886), [@haircommander](https://github.com/haircommander))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4974](https://github.com/cri-o/cri-o/pull/4974), [@haircommander](https://github.com/haircommander))
+ - The privileged_without_host_devices flag can now be given a an additional parameter to configure a runtime ([#5054](https://github.com/cri-o/cri-o/pull/5054), [@littlejawa](https://github.com/littlejawa))
 
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
