--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...d41627b](https://github.com/cri-o/cri-o/compare/v1.21.0...d41627bc87d225b32eeecccaad3b7ffe79141f99) on Sat, 03 Jul 2021 13:56:43 UTC.
+[v1.21.0...c8b82d6](https://github.com/cri-o/cri-o/compare/v1.21.0...c8b82d6c26015c760a03a0e7b3972f98d2fecca7) on Mon, 05 Jul 2021 18:01:05 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz)
-- [cri-o.arm64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d41627bc87d225b32eeecccaad3b7ffe79141f99.tar.gz)
+- [cri-o.amd64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz)
+- [cri-o.arm64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -144,6 +144,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.13](https://github.com/creack/pty/compare/v1.1.11...v1.1.13)
 - github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
+- github.com/cyphar/filepath-securejoin: [v0.2.2 → v0.2.3](https://github.com/cyphar/filepath-securejoin/compare/v0.2.2...v0.2.3)
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
