Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...c8b82d6](https://github.com/cri-o/cri-o/compare/v1.21.0...c8b82d6c26015c760a03a0e7b3972f98d2fecca7) on Mon, 05 Jul 2021 18:01:05 UTC.
+[v1.21.0...3e5a1e4](https://github.com/cri-o/cri-o/compare/v1.21.0...3e5a1e48158316b1f378cd2dceb67b6ab670bc36) on Wed, 07 Jul 2021 13:26:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz)
-- [cri-o.arm64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c8b82d6c26015c760a03a0e7b3972f98d2fecca7.tar.gz)
+- [cri-o.amd64.3e5a1e48158316b1f378cd2dceb67b6ab670bc36.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3e5a1e48158316b1f378cd2dceb67b6ab670bc36.tar.gz)
+- [cri-o.arm64.3e5a1e48158316b1f378cd2dceb67b6ab670bc36.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3e5a1e48158316b1f378cd2dceb67b6ab670bc36.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -48,6 +48,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   The klog info verbositry is converted to CRI-O debug to lower the log verbosity. ([#4973](https://github.com/cri-o/cri-o/pull/4973), [@saschagrunert](https://github.com/saschagrunert))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
+ - The runtime_config_path option, which allows to specify the path of the runtime configuration file, is now supported by CRI-O.  This is specific to the VM runtime type. ([#5035](https://github.com/cri-o/cri-o/pull/5035), [@fidencio](https://github.com/fidencio))
  - Validate certificate dates for TLS metrics endpoint ([#4990](https://github.com/cri-o/cri-o/pull/4990), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Design
@@ -92,6 +93,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/cncf/xds/go: [fbca930](https://github.com/cncf/xds/go/tree/fbca930)
+- github.com/containerd/cri-containerd: [v1.19.0](https://github.com/containerd/cri-containerd/tree/v1.19.0)
 - github.com/danieljoos/wincred: [v1.1.0](https://github.com/danieljoos/wincred/tree/v1.1.0)
 - github.com/dsnet/compress: [v0.0.1](https://github.com/dsnet/compress/tree/v0.0.1)
 - github.com/dsnet/golib: [1ea1667](https://github.com/dsnet/golib/tree/1ea1667)
