--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...feb7a4c](https://github.com/cri-o/cri-o/compare/v1.21.0...feb7a4cae6c9c3cf396f92425d5bb78008d395ad) on Thu, 08 Jul 2021 08:52:00 UTC.
+[v1.21.0...472b3ae](https://github.com/cri-o/cri-o/compare/v1.21.0...472b3aecb053f29fa6697d9ec5471c31dd03cdf8) on Thu, 08 Jul 2021 15:16:57 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.feb7a4cae6c9c3cf396f92425d5bb78008d395ad.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.feb7a4cae6c9c3cf396f92425d5bb78008d395ad.tar.gz)
-- [cri-o.arm64.feb7a4cae6c9c3cf396f92425d5bb78008d395ad.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.feb7a4cae6c9c3cf396f92425d5bb78008d395ad.tar.gz)
+- [cri-o.amd64.472b3aecb053f29fa6697d9ec5471c31dd03cdf8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.472b3aecb053f29fa6697d9ec5471c31dd03cdf8.tar.gz)
+- [cri-o.arm64.472b3aecb053f29fa6697d9ec5471c31dd03cdf8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.472b3aecb053f29fa6697d9ec5471c31dd03cdf8.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -39,6 +39,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
 
 #### Feature
+ - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
   if the provided cert and key paths are not available on disk. ([#5012](https://github.com/cri-o/cri-o/pull/5012), [@saschagrunert](https://github.com/saschagrunert))
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
