Update release notes

--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -14,14 +14,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...41925ef](https://github.com/cri-o/cri-o/compare/v1.20.2...41925ef13bf83e77dc264cffc98b600c776e7748) on Mon, 28 Jun 2021 13:27:02 UTC.
+[v1.20.2...0addf34](https://github.com/cri-o/cri-o/compare/v1.20.2...0addf344487714f41d0134c3c53263beb29d232a) on Mon, 12 Jul 2021 07:04:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz)
-- [cri-o.arm64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.41925ef13bf83e77dc264cffc98b600c776e7748.tar.gz)
+- [cri-o.amd64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz)
+- [cri-o.arm64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0addf344487714f41d0134c3c53263beb29d232a.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where CRI-O prematurely stopped pulling from a blocked registry, even if there was a mirror for that registry it was allowed to pull from. ([#5034](https://github.com/cri-o/cri-o/pull/5034), [@haircommander](https://github.com/haircommander))
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
+ - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5000](https://github.com/cri-o/cri-o/pull/5000), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
