Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...effa584](https://github.com/cri-o/cri-o/compare/v1.21.0...effa584c039d3ee519afb08fcad9f449d52a13a6) on Thu, 08 Jul 2021 18:59:54 UTC.
+[v1.21.0...196e779](https://github.com/cri-o/cri-o/compare/v1.21.0...196e779a2fa5963b892644575e9db625ccab1f0c) on Tue, 13 Jul 2021 17:28:36 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.effa584c039d3ee519afb08fcad9f449d52a13a6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.effa584c039d3ee519afb08fcad9f449d52a13a6.tar.gz)
-- [cri-o.arm64.effa584c039d3ee519afb08fcad9f449d52a13a6.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.effa584c039d3ee519afb08fcad9f449d52a13a6.tar.gz)
+- [cri-o.amd64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz)
+- [cri-o.arm64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -155,6 +155,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/golang/protobuf: [v1.3.5 → v1.5.2](https://github.com/golang/protobuf/compare/v1.3.5...v1.5.2)
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/google/renameio: [v1.0.0 → v1.0.1](https://github.com/google/renameio/compare/v1.0.0...v1.0.1)
+- github.com/google/uuid: [v1.2.0 → v1.3.0](https://github.com/google/uuid/compare/v1.2.0...v1.3.0)
 - github.com/grpc-ecosystem/go-grpc-middleware: [v1.2.2 → v1.3.0](https://github.com/grpc-ecosystem/go-grpc-middleware/compare/v1.2.2...v1.3.0)
 - github.com/grpc-ecosystem/grpc-gateway: [v1.9.5 → v1.16.0](https://github.com/grpc-ecosystem/grpc-gateway/compare/v1.9.5...v1.16.0)
 - github.com/hashicorp/consul/api: [v1.3.0 → v1.1.0](https://github.com/hashicorp/consul/api/compare/v1.3.0...v1.1.0)
