Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...196e779](https://github.com/cri-o/cri-o/compare/v1.21.0...196e779a2fa5963b892644575e9db625ccab1f0c) on Tue, 13 Jul 2021 17:31:34 UTC.
+[v1.21.0...ab3a2f4](https://github.com/cri-o/cri-o/compare/v1.21.0...ab3a2f42be88083638b600b33c79683c3c960fe0) on Wed, 14 Jul 2021 07:25:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz)
-- [cri-o.arm64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.196e779a2fa5963b892644575e9db625ccab1f0c.tar.gz)
+- [cri-o.amd64.ab3a2f42be88083638b600b33c79683c3c960fe0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ab3a2f42be88083638b600b33c79683c3c960fe0.tar.gz)
+- [cri-o.arm64.ab3a2f42be88083638b600b33c79683c3c960fe0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ab3a2f42be88083638b600b33c79683c3c960fe0.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -94,8 +94,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/cncf/xds/go: [fbca930](https://github.com/cncf/xds/go/tree/fbca930)
+- github.com/container-orchestrated-devices/container-device-interface: [f99e8b6](https://github.com/container-orchestrated-devices/container-device-interface/tree/f99e8b6)
 - github.com/containerd/cri-containerd: [v1.19.0](https://github.com/containerd/cri-containerd/tree/v1.19.0)
+- github.com/coreos/stream-metadata-go: [70edb9e](https://github.com/coreos/stream-metadata-go/tree/70edb9e)
 - github.com/danieljoos/wincred: [v1.1.0](https://github.com/danieljoos/wincred/tree/v1.1.0)
+- github.com/digitalocean/go-libvirt: [e2a69bc](https://github.com/digitalocean/go-libvirt/tree/e2a69bc)
+- github.com/digitalocean/go-qemu: [152a153](https://github.com/digitalocean/go-qemu/tree/152a153)
+- github.com/disiqueira/gotree/v3: [v3.0.2](https://github.com/disiqueira/gotree/v3/tree/v3.0.2)
 - github.com/dsnet/compress: [v0.0.1](https://github.com/dsnet/compress/tree/v0.0.1)
 - github.com/dsnet/golib: [1ea1667](https://github.com/dsnet/golib/tree/1ea1667)
 - github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
@@ -105,6 +110,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/licenseclassifier/v2: [v2.0.0-alpha.1](https://github.com/google/licenseclassifier/v2/tree/v2.0.0-alpha.1)
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
+- github.com/jinzhu/copier: [v0.3.0](https://github.com/jinzhu/copier/tree/v0.3.0)
 - github.com/mholt/archiver/v3: [v3.5.0](https://github.com/mholt/archiver/v3/tree/v3.5.0)
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
@@ -138,17 +144,18 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [dbaa18c → v0.1.0](https://github.com/containerd/nri/compare/dbaa18c...v0.1.0)
 - github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
 - github.com/containerd/zfs: [dde8f0f → v1.0.0](https://github.com/containerd/zfs/compare/dde8f0f...v1.0.0)
-- github.com/containers/buildah: [v1.20.0 → v1.20.1](https://github.com/containers/buildah/compare/v1.20.0...v1.20.1)
-- github.com/containers/common: [v0.35.4 → v0.37.1](https://github.com/containers/common/compare/v0.35.4...v0.37.1)
+- github.com/containers/buildah: [v1.20.0 → v1.21.2](https://github.com/containers/buildah/compare/v1.20.0...v1.21.2)
+- github.com/containers/common: [v0.35.4 → v0.38.12](https://github.com/containers/common/compare/v0.35.4...v0.38.12)
 - github.com/containers/image/v5: [v5.11.0 → v5.13.2](https://github.com/containers/image/v5/compare/v5.11.0...v5.13.2)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
-- github.com/containers/podman/v3: [v3.1.0 → v3.1.2](https://github.com/containers/podman/v3/compare/v3.1.0...v3.1.2)
+- github.com/containers/podman/v3: [v3.1.0 → v3.2.2](https://github.com/containers/podman/v3/compare/v3.1.0...v3.2.2)
 - github.com/containers/storage: [v1.28.1 → v1.32.3](https://github.com/containers/storage/compare/v1.28.1...v1.32.3)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.13](https://github.com/creack/pty/compare/v1.1.11...v1.1.13)
 - github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
 - github.com/cyphar/filepath-securejoin: [v0.2.2 → v0.2.3](https://github.com/cyphar/filepath-securejoin/compare/v0.2.2...v0.2.3)
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
+- github.com/docker/docker: [646072e → v20.10.6+incompatible](https://github.com/docker/docker/compare/646072e...v20.10.6)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
@@ -161,6 +168,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/hashicorp/consul/api: [v1.3.0 → v1.1.0](https://github.com/hashicorp/consul/api/compare/v1.3.0...v1.1.0)
 - github.com/hashicorp/consul/sdk: [v0.3.0 → v0.1.1](https://github.com/hashicorp/consul/sdk/compare/v0.3.0...v0.1.1)
 - github.com/imdario/mergo: [v0.3.11 → v0.3.12](https://github.com/imdario/mergo/compare/v0.3.11...v0.3.12)
+- github.com/ishidawataru/sctp: [00ab2ac → f2269e6](https://github.com/ishidawataru/sctp/compare/00ab2ac...f2269e6)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/klauspost/compress: [v1.11.13 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.1)
 - github.com/magefile/mage: [v1.10.0 → v1.11.0](https://github.com/magefile/mage/compare/v1.10.0...v1.11.0)
@@ -172,6 +180,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/gomega: [v1.11.0 → v1.14.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.14.0)
 - github.com/opencontainers/runc: [v1.0.0-rc93 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...a95237f)
 - github.com/opencontainers/selinux: [v1.8.0 → v1.8.2](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.2)
+- github.com/openshift/imagebuilder: [v1.2.0 → 87f3e48](https://github.com/openshift/imagebuilder/compare/v1.2.0...87f3e48)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
 - github.com/prometheus/client_golang: [v1.10.0 → v1.11.0](https://github.com/prometheus/client_golang/compare/v1.10.0...v1.11.0)
@@ -179,8 +188,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rogpeppe/fastuuid: [6724a57 → v1.2.0](https://github.com/rogpeppe/fastuuid/compare/6724a57...v1.2.0)
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
+- github.com/rootless-containers/rootlesskit: [v0.14.0-beta.0 → v0.14.2](https://github.com/rootless-containers/rootlesskit/compare/v0.14.0-beta.0...v0.14.2)
 - github.com/saschagrunert/go-modiff: [v1.2.1 → v1.3.0](https://github.com/saschagrunert/go-modiff/compare/v1.2.1...v1.3.0)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
+- github.com/uber/jaeger-client-go: [v2.25.0+incompatible → v2.28.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.25.0...v2.28.0)
 - github.com/yuin/goldmark: [v1.3.1 → v1.3.5](https://github.com/yuin/goldmark/compare/v1.3.1...v1.3.5)
 - go.etcd.io/bbolt: v1.3.5 → v1.3.6
 - go.uber.org/atomic: v1.5.0 → v1.4.0
